fixed some comments by PP, and add new table

--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -574,22 +574,6 @@
   year   = {2003}
 }
 
-@InProceedings{Boyapati:2002,
-  author    = {Boyapati, Chandrasekhar and Khurshid, Sarfraz and Marinov, Darko},
-  title     = {Korat: Automated Testing Based on Java Predicates},
-  booktitle = {Proceedings of the 2002 ACM SIGSOFT International Symposium on Software Testing and Analysis},
-  year      = {2002},
-  series    = {ISSTA '02},
-  pages     = {123--133},
-  address   = {New York, NY, USA},
-  publisher = {ACM},
-  acmid     = {566191},
-  doi       = {},
-  isbn      = {1-58113-562-9},
-  location  = {Roma, Italy},
-  numpages  = {11},
-  url       = {},
-}
 
 @inproceedings{DBLP:conf/tacas/NoriRTT09,
   author    = {Aditya V. Nori and
@@ -727,6 +711,20 @@
   title = {\emph{Efficient Bounded Exhaustive Input Generation from Program APIs} paper's artifact},
   howpublished = {\url{https://doi.org/10.5281/zenodo.7574758}},
 }
+
+@inproceedings{Siddiqui09,
+  author    = {Jawwad H. Siddiqui and Sarfraz Khurshid},
+  title     = {An Empirical Study of Structural Constraint Solving Techniques},
+  booktitle = {Formal Methods and Software Engineering, ICFEM 2009},
+  editor    = {K. K. Breitman and A. Cavalcanti},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {5885},
+  pages     = {88--106},
+  publisher = {Springer},
+  year      = {2009},
+  doi       = {10.1007/978-3-642-10373-5_6}
+}
+
 
 @article{Rosner14,
 author = {Rosner, Nicol\'{a}s and Bengolea, Valeria and Ponzio, Pablo and Khalek, Shadi Abdul and Aguirre, Nazareno and Frias, Marcelo F. and Khurshid, Sarfraz},
@@ -903,21 +901,6 @@ keywords = {metamorphic relation, test case generation, Metamorphic testing, ora
   bibsource = {dblp computer science bibliography, https://dblp.org},
   biburl    = {https://dblp.org/rec/conf/spin/VisserM05.bib},
   timestamp = {Tue, 14 May 2019 10:00:36 +0200},
-}
-
-@InProceedings{Siddiqui09,
-  author    = {Junaid Haroon Siddiqui and Sarfraz Khurshid},
-  title     = {An Empirical Study of Structural Constraint Solving Techniques},
-  booktitle = {Formal Methods and Software Engineering, 11th International Conference on Formal Engineering Methods, {ICFEM} 2009, Rio de Janeiro, Brazil, December 9-12, 2009. Proceedings},
-  year      = {2009},
-  editor    = {Karin K. Breitman and Ana Cavalcanti},
-  volume    = {5885},
-  series    = {Lecture Notes in Computer Science},
-  pages     = {88--106},
-  publisher = {Springer},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  biburl    = {https://dblp.org/rec/conf/icfem/SiddiquiK09.bib},
-  timestamp = {Wed, 25 Sep 2019 18:13:47 +0200},
 }
 
 @InProceedings{Gligoric10,
