--- a/tables/coverageRandoop.tex
+++ b/tables/coverageRandoop.tex
@@ -7,7 +7,7 @@
 \hline
 &Budget&\multicolumn{2}{c|}{Ramas} &\multicolumn{2}{c|}{Linea} \\
 \hline
-   &   &API &BLD  &API &BLD   \\
+   &   &API &MGO  &API &MGO   \\
 \hline
 
 \multirow{1}{*}{\textbf{NCL}}
