--- a/tables/optimizaciones.tex
+++ b/tables/optimizaciones.tex
@@ -7,7 +7,7 @@
   \toprule
   \multicolumn{6}{c}{\textbf{Real World}} \\
   \midrule 
-  \textbf{Class} & \textbf{Scope} & \textbf{SM/BLD} & \textbf{SM}  & \textbf{BLD} & \textbf{NoOPT}  \\
+  \textbf{Class} & \textbf{Scope} & \textbf{CI/MGO} & \textbf{CI}  & \textbf{MGO} & \textbf{NoOPT}  \\
   \midrule
   NCL
 &	3	&	.10	&	.47	&	-	&	-	\\
@@ -18,7 +18,7 @@
   TSet
 &	3	&	.03	&	.07	&	56.82	&	-	\\
 &	4	&	.06	&	.13	&	-	&	-	\\
-&	5	&	.11	&	.22	&	-	&	-	\\
+&	5	&	.11	&	.22 	&	-	&	-	\\
 &	6	&	.17	&	.42	&	-	&	-	\\
 &	7	&	0.31	&	.91	&	-	&	-	\\
 &	8	&	0.74	&	2.66	&	-	&	-	\\
@@ -36,17 +36,17 @@
   \midrule
   LList
 &	3	&	.02	&	.13	&	.64	&	-	\\
-&	4	&	.06	&	.38	&		&		\\
-&	5	&	.20	&	3.80	&		&		\\
-&	6	&	.96	&	258.85	&		&		\\
-&	7	&	12.98	&		&		&		\\
-&	8	&	286.21	&		&		&		\\
+&	4	&	.06	&	.38	&	-	&	-	\\
+&	5	&	.20	&	3.80	&	-		&	-	\\
+&	6	&	.96	&	258.85	&	-	&	-	\\
+&	7	&	12.98	&	-	&	-	&	-	\\
+&	8	&	286.21	&	-	&	-	&	-	\\
   \midrule
   HMap
 &	3	&	.10	&	11.49	&	-	&	-	\\
-&	4	&	.55	&		&		&		\\
-&	5	&	5.33	&		&		&		\\
-&	6	&	119.87	&		&		&		\\
+&	4	&	.55	&	-	&	-	&	- \\
+&	5	&	5.33	&	-	&	-	&	-	\\
+&	6	&	119.87	&	-	&	-	&	-	\\
   \midrule
   Schedule
 &	3	&	.01	&	.01	&	59.27	&	-	\\
@@ -68,11 +68,12 @@ ejecución}
 \scriptsize
 \centering
 \label{tab:results-obj1}
+
 \begin{tabular}{ l r | r | r | r | r  }
   \toprule
   \multicolumn{6}{c}{\textbf{FAJITA}} \\
   \midrule 
-  \textbf{Class} & \textbf{Scope} & \textbf{SM/BLD} & \textbf{SM}  & \textbf{BLD} & \textbf{NoOPT}  \\
+  \textbf{Clase} & \textbf{Scope} & \textbf{CI/MGO} & \textbf{CI}  & \textbf{MGO} & \textbf{NoOPT}  \\
   \midrule
   BinTree
 &	3	&	0.06	&	0.05	&	0.63	&	0.886	\\
@@ -155,7 +156,7 @@ ejecución}
   \toprule
   \multicolumn{6}{c}{\textbf{ROOPS}} \\
   \midrule 
-  \textbf{Class} & \textbf{Scope} & \textbf{SM/BLD} & \textbf{SM}  & \textbf{BLD} & \textbf{NoOPT}  \\
+  \textbf{Clase} & \textbf{Scope} & \textbf{CI/MGO} & \textbf{CI}  & \textbf{MGO} & \textbf{NoOPT}  \\
   \midrule
   AVL
 &	3	&	0.02	&	0.04	&	.34	&	-	\\
@@ -238,7 +239,7 @@ ejecución}
   \toprule
   \multicolumn{6}{c}{\textbf{Korat}} \\
   \midrule 
-  \textbf{Class} & \textbf{Scope} & \textbf{SM/BLD} & \textbf{SM}  & \textbf{BLD} & \textbf{NoOPT}  \\
+  \textbf{Clase} & \textbf{Scope} & \textbf{CI/MGO} & \textbf{CI}  & \textbf{MGO} & \textbf{NoOPT}  \\
   \midrule
   DLList
 &	3	&	0.06	&	0.07	&	0.53	&	31.63	\\
@@ -263,7 +264,7 @@ ejecución}
 &	6	&	44503	&	176.12	&	-	&	-	\\
 &	7	&	25.32	&	-	&	-	&	-	\\
 &	8	&	163.39	&	-	&	-	&	-	\\
-&	9	&	-	&		&		&		\\
+&	9	&	-	&	-	&	-	&	-	\\
   \midrule
   BST
 &	3	&	0.04	&	0.02	&	0.24	&	0.55	\\
@@ -323,7 +324,7 @@ ejecución}
   \toprule
   \multicolumn{6}{c}{\textbf{Kiasan}} \\
   \midrule 
-  \textbf{Class} & \textbf{Scope} & \textbf{SM/BLD} & \textbf{SM}  & \textbf{BLD} & \textbf{NoOPT}  \\
+  \textbf{Clase} & \textbf{Scope} & \textbf{CI/MGO} & \textbf{CI}  & \textbf{MGO} & \textbf{NoOPT}  \\
   \midrule
   BinTree
 &	3	&	0.03	&	0.04	&	0.52	&	-	\\
