--- a/experimental.tex
+++ b/experimental.tex
@@ -369,7 +369,7 @@ generadores se construyen casi cinco veces más objetos con los \texttt{MGO} en
 comparación con la \texttt{API}. Notablemente, la diferencia en la cantidad de
 objetos generados se incrementa con el presupuesto. 
 
-\cacho{Para observar la ganancia de los objectos, se mide en la seccion XXX, donde consideramos no solo la tecnica de randoop y randoop con builder sino que consideramos veapi y randoop tradicional}
+\cacho{Para observar la calidad de los objectos, se mide en la seccion \ref{sec:parametrizedTesting}, donde consideramos no solo la tecnica de Randoop y Randoop con MGO sino que, tambien, consideramos BEAPI.}
 \pp{Falta lo de size}
 \cacho{Agregar table, URGENTE!. escribir esa parte}
 
