rm wrong lines in tables

--- a/experimental.tex
+++ b/experimental.tex
@@ -564,7 +564,7 @@ investigación:
 \end{itemize}
 
 \subsection{Configuración experimental}
-\ref{sec:confExperimentalBeapi}
+\label{sec:confExperimentalBeapi}
 
 Como casos de estudio, utilizamos implementaciones de estructuras de datos
 tomadas de tres benchmarks existentes: \textsf{Kiasan} \cite{Deng06}, 
