--- a/tables/bugRepOk.tex
+++ b/tables/bugRepOk.tex
@@ -2,7 +2,7 @@
 \scriptsize
 \renewcommand{\arraystretch}{1.2} %
 \setlength\dashlinedash{1pt}
-\begin{tabular}{ll|ll}
+\begin{tabular}{ll ll}
 \toprule
 \textbf{Bench.} & \textbf{Clase}   & \textbf{Descripción del Error} &   \textbf{Tipo} \\
 Korat    &     RBTree   & El color de la raíz debería ser negro & sub  \\
