--- a/tables/optimizaciones.tex
+++ b/tables/optimizaciones.tex
@@ -3,7 +3,7 @@
 \scriptsize
 
 \centering
-\begin{tabular}{ l r | r | r | r | r  }
+\begin{tabular}{ l r  r  r  r  r  }
   \toprule
   \multicolumn{6}{c}{\textbf{Real World}} \\
   \midrule 
@@ -69,7 +69,7 @@ ejecución}
 \centering
 \label{tab:results-obj1}
 
-\begin{tabular}{ l r | r | r | r | r  }
+\begin{tabular}{ l r  r  r  r  r  }
   \toprule
   \multicolumn{6}{c}{\textbf{FAJITA}} \\
   \midrule 
@@ -152,7 +152,7 @@ ejecución}
 \scriptsize
 \centering
 \label{tab:results-obj2}
-\begin{tabular}{ l r | r | r | r | r  }
+\begin{tabular}{ l r  r  r  r  r  }
   \toprule
   \multicolumn{6}{c}{\textbf{ROOPS}} \\
   \midrule 
@@ -235,7 +235,7 @@ ejecución}
 
 \centering
 \label{tab:results-obj3}
-\begin{tabular}{ l r | r | r | r | r  }
+\begin{tabular}{ l r  r  r  r  r  }
   \toprule
   \multicolumn{6}{c}{\textbf{Korat}} \\
   \midrule 
@@ -320,7 +320,7 @@ ejecución}
 \scriptsize
 \centering
 \label{tab:results-obj4}
-\begin{tabular}{ l r | r | r | r | r  }
+\begin{tabular}{ l r  r  r  r  r  }
   \toprule
   \multicolumn{6}{c}{\textbf{Kiasan}} \\
   \midrule 
