--- a/tables/tableJPFBuilders.tex
+++ b/tables/tableJPFBuilders.tex
@@ -1,7 +1,7 @@
 
 \begin{table}
 \scriptsize
-\begin{tabular}{ c| l| c c c c c}
+\begin{tabular}{ c l c c c c c}
 \hline
 Clase & Método & Scope &
 \multicolumn{2}{c}{\textsf{MGO}} &
