--- a/tables/tableJPFBuilders1.tex
+++ b/tables/tableJPFBuilders1.tex
@@ -1,6 +1,6 @@
 \begin{table}[H]
 \scriptsize
-\begin{tabular}{ c| l| c c c c c}
+\begin{tabular}{ c l c c c c c}
 \hline
 Clase & Método & Scope &
 \multicolumn{2}{c}{\textsf{MGO}} &
