--- a/tables/tableEficienciaBEAPI1.tex
+++ b/tables/tableEficienciaBEAPI1.tex
@@ -1,7 +1,7 @@
 \begin{table}[H]
 \begin{center}
 \tiny
-\begin{tabular}{clr|rr|rr|rr}
+\begin{tabular}{clr rr rr rr}
 \toprule
 & \textbf{Class} & \textbf{S} &
 \multicolumn{2}{c}{\textbf{Time}} & \multicolumn{2}{c}{\textbf{Generated}} & \multicolumn{2}{c}{\textbf{Explored}} \\
