--- a/experimental.tex
+++ b/experimental.tex
@@ -105,7 +105,7 @@ un máximo de 20 generaciones por ejecución.
 Para las evaluaciones con la función objetivo basada en cobertura (\textbf{FRC}), 
 fijamos un tiempo máximo de ejecución de Randoop de 30 segundos por candidato. 
 %Este tiempo fue suficiente para generar suites de tests y lograr buena cobertura de código en nuestros experimentos.  
-\pp{Esto de abajo no se entiende, tenemos que charlarlo:}
+\pp{Esto de abajo no se entiende, tenemos que charlarlo:
 \cacho{Lo cambie un poco pero no sé si está bien:}
 Randoop introduce un componente de aleatoriedad en la generación de tests. 
 Para controlar este factor y garantizar la reproducibilidad de los resultados de los experimentos con los mismo conjunto de parámetros, 
