--- a/experimental.tex
+++ b/experimental.tex
@@ -105,8 +105,7 @@ un máximo de 20 generaciones por ejecución.
 Para las evaluaciones con la función objetivo basada en cobertura (\textbf{FRC}), 
 fijamos un tiempo máximo de ejecución de Randoop de 30 segundos por candidato. 
 %Este tiempo fue suficiente para generar suites de tests y lograr buena cobertura de código en nuestros experimentos.  
-\pp{Esto de abajo no se entiende, tenemos que charlarlo:
-\cacho{Lo cambie un poco pero no sé si está bien:}
+\pp{Esto de abajo no se entiende, tenemos que charlarlo}
 Randoop introduce un componente de aleatoriedad en la generación de tests. 
 Para controlar este factor y garantizar la reproducibilidad de los resultados de los experimentos con los mismo conjunto de parámetros, 
 fijamos dos semillas distintas.
@@ -329,7 +328,7 @@ software}
 \input{tables/objectsBuilders.tex}
 
 \cacho{En esta sección evaluamos la utilidad práctica de los métodos generadores de objetos 
-identificados previamente con el algoritmo de \emph{Hill Climbing}(\ref{alg:approachHC})} 
+identificados previamente con el algoritmo de \emph{Hill Climbing}(\ref{alg:approachHC}) 
 con la función objetivo basada en la cantidad de objetos producidos por un generador exhaustivo acotado (\ref{sec:fitnessGE}), en el contexto de la
 generación automática de objetos para las clases evaluadas}. 
 Estos objetos pueden ser utilizadas luego como 
