caption de tabla

--- a/tables/eficienciaBuilders.tex
+++ b/tables/eficienciaBuilders.tex
@@ -57,6 +57,7 @@
 \hline
 \end{tabular}
 }
-\caption{Tiempo en segundos para hallar el subconjunto suficiente de métodos generadores.}
+\caption{Tiempo en segundos para hallar un subconjunto de métodos generadores de
+objetos.}
 \label{tab:eficiencia}
 \end{table}
