caption de tabla

--- a/tables/eficaciaBuilders.tex
+++ b/tables/eficaciaBuilders.tex
@@ -3,7 +3,7 @@
 \scriptsize
 \begin{tabular}{c ccccc}
 \midrule
-\multicolumn{2}{c}{\multirow{3}{*}{\textbf{Cases}}} & \multicolumn{4}{c}{\textbf{Efectividad}} \\
+\multicolumn{2}{c}{\multirow{3}{*}{\textbf{Cases}}} & \multicolumn{4}{c}{\textbf{Precisión}} \\
 \cline{3-6}
 \multicolumn{2}{c}{} & \multicolumn{2}{c}{\textbf{GA}} & \multicolumn{2}{c}{\textbf{HC}}  \\
 \multicolumn{2}{c}{} & \textbf{\tiny{FGE}} & \textbf{\tiny{FRC}} & \textbf{\tiny{FGE}} & \textbf{\tiny{FRC}}  \\
@@ -60,7 +60,8 @@
 \hline
 \end{tabular}
 
-\caption{Tabla de casos de estudio y efectividad de encontrar el subconjunto óptimo}
+\caption{Precisión de los algoritmos para encontrar un subconjunto métodos
+generadores de objetos}
 \label{tab:efectividad}
 \end{table}
 
